--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">snapme</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_settings">Settings</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_profile">Profile</string>
     <string name="loading">Loading</string>
@@ -10,4 +10,5 @@
     <string name="crown_emoji">👑</string>
 
     <string name="profile_picture_alt">Profile picture</string>
+    <string name="profile_image_alt">Profile Image</string>
 </resources>
